2006-10-12 Jens Tkotz <jens@peino.de> 1.6-svn-b25

 * Fix: #1487824, allow negative alignment for watermark.

2006-10-12 Jens Tkotz <jens@peino.de> 1.6-svn-b24

 * Fix: Missed some tablename changes in 1.6-svn-b7 
	for joomla! and mambo

 * Change: CSS changes to make popup headers and comments 
	   look nicer when embedded.

2006-10-12 Jens Tkotz <jens@peino.de> 1.6-svn-b23

 * Fix: #1299913 ; $_REQUEST['name'] is now NOT longer an indicator for beeing embedded.

 * Little CSS typo.

2006-10-11 Jens Tkotz <jens@peino.de> 1.6-svn-b22

 * Change: Move "Send as eCard" into albumItem options.

 * New: Added attribute "separate" to albumItem options.
	All separate options are shown *drumroll* separately.

2006-10-10 Jens Tkotz <jens@peino.de> 1.6-svn-b21

 * Fix: Clickcounter in stats did not work.

2006-10-10 Jens Tkotz <jens@peino.de> 1.6-svn-b20

 * Change: Better failure handling for eCards.

 * Fix: eCard preview did not work embedded.

2006-10-10 Jens Tkotz <jens@peino.de> 1.6-svn-b19

 * Fix: More code and CSS adjustments for autocomplete.

2006-10-09 Jens Tkotz <jens@peino.de> 1.6-svn-b18

 * Fix: Code and CSS adjustments to new yui! version.

2006-10-03 Jens Tkotz <jens@peino.de> 1.6-svn-b17

 * Update: yahoo! yui -> 0.11.4

2006-09-16 Jens Tkotz <jens@peino.de> 1.6-svn-b16

 * Fix/Change: lib/lang.php
    - initlanguage() was called to late in init.php.
      This results in a Call to undefined function: _()

    - Added second param $userlanguage to initlanguage()
      If this is set a reinit is forced.

    - Check in init.php for user language if this is different then
      already initialized $gallery->language, do a reinit.

    - Enhanced the emulation of gettext and ngettext to adjust with possible
      reinit.

2006-09-17 Jens Tkotz <jens@peino.de> 1.6-svn-b15
2006-03-28 Jens Tkotz <jens@peino.de> 1.5.3-cvs-b18

 * SECURITY FIX *

  It was possible to use/"inject" Javascript inside various places
  to abuse this as a XSS Exploit.
