@@ -1,6 +1,6 @@
 Hello, 
 
-this a very little description what you have to do to make Gallery >=1.4.3 work with phpBB2 2.0.6 - 2.0.19
+this a very little description what you have to do to make Gallery >= 1.6 work with phpBB2 2.0.6 - 2.0.21
 
 - Fresh phpBB2 installlation
 
