@@ -41,6 +41,14 @@ switch($GALLERY_EMBEDDED_INSIDE_TYPE) {
 		global $do_gzip_compress;
 		global $lang;
 
+		if (isDebugging()) {
+		    $infoText = sprintf(_("Debug ON ! Level %s"), $gallery->app->debuglevel) . '<br>';
+		    $infoText .= "Embedded in: phpBB2 ; Theme: {$gallery->app->theme}";
+
+		    echo infoBox(array(array('text' => $infoText, 'type' => 'information')));
+		}
+
+		echo "\n</div>";
 		include (PHPBB_ROOT_PATH . "includes/page_tail.php");
 	break;
 
