@@ -1,3 +1,14 @@
+2006-10-12 Jens Tkotz <jens@peino.de> 1.6-svn-b26
+
+ * Fix: phpBB2 fixes. (Thanks to h0bbel)
+    - Moving first HTML Output in albums view below the header
+
+    - Rename $theme in albums.php to $g_theme to avoid conflict.
+
+    - Added closing div and debug info into footer as phpBB2 exists earlier.
+
+    - Updated Howto. Gallery 1.6 works also with phpBB 2.0.21
+
 2006-10-12 Jens Tkotz <jens@peino.de> 1.6-svn-b25
 
  * Fix: #1487824, allow negative alignment for watermark.
